# Realtime_Chat

./: docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile  index.html
backend/.sqlx/: query-1529c193a7cc8daaa3ea159bed411ca9cfd3d117603c10f64c78d0114733d506.json  query-1d43a02bfaac6d644c4e8bc80b3dcf3f6e079647fe345ac64744de1d6de295bc.json  query-2bd04d627dcdf34216c7a35c8dea5f4368e037850a039f97627e81bfe2d79544.json  query-3247cfedf37175b073ae44139d3eeeea2aa84c928d6d178fdf4687253693634f.json  query-37ded8f21af389645edc48271bc451cc84723e7a5763ecb8843ffdc554927003.json  query-67d0aa1e9ebb7b68ed0a648e110cc75ab195de298659a11b3df1c750c149d3b4.json  query-801f288a594fc3ecce0e5906378012275b68c08ba71da74a5b56773f6b334bf1.json  query-83214d53057488098ed8cb5a236c591ed5a84cad3300bb0355bc4a267b45e249.json  query-ac077cc06eeb0f3c848aca5a82bc07abc8b5d3a4588d5a72bd03bd6e9a1e2cd3.json  query-adc0ed10bad139f003f25bbd2becf21b068871037b60483953a58a8bf8e5232b.json  query-b7669d8820104b20b9e3f3a983e073e946a1401c3af7d38b76331b5d78088125.json  query-c41b6f0e23b54556ea9e16859db8f82ed8abbbb47a234cbb9bdf21bb21640d5f.json  query-d8115887251bc5dd843c80b874bb7ceb5fdde51bcb27ac46785ffb1c6d94e62f.json  query-e24c97fcb3da09f44f5e9791284401e8791c897a2466e92e05e1e1eb637e413d.json  query-e6a5971e1614de8a85142c3c494c9d654a44179d43d28cf3d55e76627d147605.json  query-e7ad28e6112282beb14601a72cdeab5d79477eb312d22165e9c01c1629a2d336.json  query-e803dc8b3333fde810f2f3767776602f88329757cf1ba0b3102ede5f99c3a093.json  query-f64c0eda9167000622c7e6e795c502640495cf9d176f94defa74d571fea9529d.json
(+41 files in other folders)
